<?xml version="1.0"?>
<package format="2">
  <name>tf2</name>
  <version>0.5.12</version>
  <description>
    tf2 is the second generation of the transform library, which lets
    the user keep track of multiple coordinate frames over time. tf2
    maintains the relationship between coordinate frames in a tree
    structure buffered in time, and lets the user transform points,
    vectors, etc between any two coordinate frames at any desired
    point in time.
  </description>
  <author>Tully Foote</author>
  <author>Eitan Marder-Eppstein</author>
  <author>Wim Meeussen</author>
  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/tf2</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>console_bridge</depend>
  <depend>geometry_msgs</depend>
  
  <test_depend>ament_cmake_gtest</test_depend>
  <!-- TODO(tfoote) add linting
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
