<package>
  <name>tf2_bullet</name>
  <version>0.4.0</version>
  <description>
    tf2_bullet
  </description>
  <author>Wim Meeussen</author>
  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/tf2_bullet</url>
    
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf2_ros</build_depend>
  <build_depend>bullet</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>tf2_ros</run_depend>
  <run_depend>bullet</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>

