<?xml version="1.0"?>
<package>
  <name>tf2_eigen</name>
  <version>0.5.13</version>
  <description>tf2_eigen</description>
  <author>Koji Terada</author>
  <maintainer email="terakoji@gmail.com">Koji Terada</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>cmake_modules</run_depend>

</package>
