<?xml version="1.0"?>
<package format="2">
  <name>tf2_eigen</name>
  <version>0.5.15</version>
  <description>tf2_eigen</description>
  <author>Koji Terada</author>
  <maintainer email="terakoji@gmail.com">Koji Terada</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>

</package>
