<?xml version="1.0"?>
<package format="2">

  <name>tf2_msgs</name>
  <version>0.5.12</version>
  <description>
    tf2_msgs
  </description>
  <author>Eitan Marder-Eppstein</author>
  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/tf2_msgs</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- <depend>actionlib_msgs</depend> -->
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
